tests/errors/type_conflict1.f90
program type_conflict1
    implicit none
    integer, parameter, target :: foo=4
    print *,foo
 end program
 